Make title wrap correctly

--- a/_sass/v2.scss
+++ b/_sass/v2.scss
@@ -215,19 +215,11 @@ p > img {
     color: var(--whiite);
 }
 
-.post-meta {
-    color: rgb(219, 219, 219);
-}
-
-// .post-link:visited {
-//     color: rgb(221, 198, 255);
-// }
-
 .post-content {
     margin: 0 auto;
     margin-bottom: 10px;
     max-width: 60em;
-    padding: 15px 40px;
+    padding: 15px 2vw;
     border-radius: 10px;
     background-color: var(--background);
 }
